Add pricing service, order-related tests, and customer admin service with GraphQL API integration